namespaces/live-1.cloud-platform.service.justice.gov.uk/nomis-user-roles-api-prod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nomis-user-roles-api-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps_dev"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts"
    cloud-platform.justice.gov.uk/application: "NOMIS User and Roles management API"
    cloud-platform.justice.gov.uk/owner: "HMPPS Community of Practice: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/nomis-user-roles-api.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-tech"
